--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,9 @@
 version: 2
 
-formats: all
 python:
-  version: "3"
+  version: "3.9"
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - "dev"
+    - requirements: requirements/requirements_doc.txt
 
 mkdocs:
   configuration: mkdocs.yml
