--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,6 +3,8 @@ version: 2
 python:
   version: "3.8"
   install:
+    - method: pip
+      path: .
     - requirements: requirements/requirements_doc.txt
 
 mkdocs:
