--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,9 @@ mkdocs-click = "^0.4.0"
 notebook = "^6.4.0"
 pylint-pytest = "^1.1.2"
 tox = "^3.23.1"
+mypy = "^0.910"
+types-click = "^7.1.2"
+types-PyYAML = "^5.4.3"
 
 [tool.poetry.scripts]
 pacsanini = 'pacsanini.cli:entry_point'
