--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ include_trailing_comma = true
 name = "pacsanini"
 version = "0.1.0"
 description = "A package for DICOM utilities."
-license = "LGPL-3.0-only"
+license = "Apache 2.0"
 authors = ["Aurélien Chick <achick@therapixel.com>"]
 maintainers = ["Aurélien Chick <achick@therapixel.com>"]
 readme = "README.md"
@@ -46,7 +46,7 @@ classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
   "Topic :: Medical Imagery",
-  "License :: OSI Approved :: GNU General Public License, Version 3",
+  "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
@@ -57,7 +57,6 @@ packages = [
     { include = "pacsanini", from = "src" },
 ]
 include = [
-  "COPYRIGHT",
   "LICENSE",
   "LICENSES",
 ]
