Added documentation on DCO.
Signed-off-by: Aurélien Chick <aurelien.chick@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
   - 'CLI Reference': 'cli_reference/index.md'
   - About:
     - Contributing: 'about/contributing.md'
+    - 'Developer Certificate of Origin': 'about/dco.md'
     - 'Code of Conduct': 'about/code_of_conduct.md'
     - License: 'about/license.md'
 
