--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ show_error_codes = True
 warn_redundant_casts = True
 warn_unused_ignores = False
 warn_return_any = False
-warn_unreachable = True
+warn_unreachable = False
 ignore_missing_imports = True
 strict_optional = False
 plugins = sqlalchemy.ext.mypy.plugin
