Added sql backend for parsing. see #40
Signed-off-by: Aurélien Chick <aurelien.chick@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,4 +31,4 @@ repos:
     rev: v0.910
     hooks:
     -   id: mypy
-        additional_dependencies: [types-click==7.1.2, types-PyYAML==5.4.3]
+        additional_dependencies: [types-click==7.1.2, types-PyYAML==5.4.3, 'sqlalchemy[mypy]']
