--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,7 @@ warn_return_any = False
 warn_unreachable = True
 ignore_missing_imports = True
 strict_optional = False
+plugins = sqlalchemy.ext.mypy.plugin
 
 [mypy-luigi.*]
 ignore_missing_imports = True
