Add sql support for cfind operations. see #40
Signed-off-by: Aurélien Chick <aurelien.chick@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
     - cli: 'api_reference/cli.md'
     - config: 'api_reference/config.md'
     - convert: 'api_reference/convert.md'
+    - db: 'api_reference/db.md'
     - errors: 'api_reference/errors.md'
     - io: 'api_reference/io.md'
     - models: 'api_reference/models.md'
