--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ pynetdicom = "^1.5.7"
 loguru = "^0.5.3"
 luigi = "^3.0.3"
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.22"}
+SQLAlchemy-Utils = "^0.37.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
