Update docs index. see #47
Signed-off-by: Aurélien Chick <aurelien.chick@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ nav:
       - 'Finding DICOM': 'user_guide/tutorials/finding.md'
       - 'Moving DICOM': 'user_guide/tutorials/moving.md'
       - 'Parsing DICOM': 'user_guide/tutorials/parsing.md'
+      - 'Storing DICOM': 'user_guide/tutorials/storescp.md'
+      - 'Using databases': 'user_guide/tutorials/database.md'
   - 'API Reference':
     - Overview: 'api_reference/index.md'
     - cli: 'api_reference/cli.md'
