Configured the pacsanini CLI option load order. see #71
Signed-off-by: Aurélien Chick <aurelien.chick@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,6 +220,7 @@ minversion = "6.0"
 testpaths = ["tests"]
 filterwarnings = [
   'ignore:Starting in pydicom 3.0, Dataset.file_meta must be a FileMetaDataset class instance',
+  "ignore:Using 'method_whitelist' with Retry is deprecated and will be removed in v2.0."
 ]
 
 [build-system]
